another test of pdf-viwer.html

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
             <h3>Research Experience & Skills</h3>
             <ol>
               <li>
-                <a class="proof_icon" href="assets/img/certs/food-abstract.pdf" target="_blank">
+                <a class="proof_icon" href="pdf-viewer.html?url=assets/img/certs/food-abstract.pdf" target="_blank">
                   <i class='bx bxs-file-pdf pdf proof_icon' ></i>
                   <br> abstract
                 </a>
@@ -420,7 +420,7 @@
               <li>I am a co-author in a research that of involving dron and Crowd Management which is under proccess. </li>
               <li>A research project of examining soft ear biometrics for human identification using Machine Learning. Currently, We are in the implementation phase and I am contributing the coding parts. Most probably we will publish on Feb 2023. </li>
               <li>
-                <a class="proof_icon" href="assets/img/certs/master-abstract.pdf" target="_blank">
+                <a class="proof_icon" href="pdf-viewer.html?url=assets/img/certs/master-abstract.pdf" target="_blank">
                   <i class='bx bxs-file-pdf pdf proof_icon' ></i>
                 </a>
                 <b>Master Thesis:</b> Expermimental Study of executing Database opertions using paralle computing by exploiting the Graphic Proccessor (GPU).
@@ -429,7 +429,7 @@
                 <a class="proof_icon" href="assets/img/certs/Symposium.jpg" target="_blank">
                   <i class='bx bxs-file-jpg proof_icon'></i>
                 </a>
-                <a class="proof_icon" href="assets/img/poster_tosmty.pdf" target="_blank">
+                <a class="proof_icon" href="pdf-viewer.html?url=assets/img/poster_tosmty.pdf" target="_blank">
                   <i class='bx bxs-file-pdf pdf proof_icon' ></i>
                 </a>
                 <b>Best Poster</b> award in 2nd research symposium in University of Business and Technology (UBT), Automated Configured Router For Controlling WiFi Sharing For Internet Guests. (2017)
@@ -552,10 +552,10 @@
                 <li>Supervising Participants in Hackathon Jeddah for Programming and AI 2021</li>
                 <li>                  
                   <!-- <a class="proof_icon" href="assets/img/certs/IEEEXtream-10.0-2016-certificate.pdf" target="_blank"> -->
-                  <a class="proof_icon" href="https://docs.google.com/viewerng/viewer?url=https://samialfattani.github.io/assets/img/certs/IEEEXtream-10.0-2016-certificate.pdf" target="_blank">
+                  <a class="proof_icon" href="pdf-viewer.html?url=assets/img/certs/IEEEXtream-10.0-2016-certificate.pdf" target="_blank">
                     <i class='bx bxs-file-pdf pdf proof_icon' ></i>
                   </a>
-                  <a class="proof_icon" href="assets/img/certs/IEEEXtreme-12.0-2018.pdf" target="_blank" >
+                  <a class="proof_icon" href="pdf-viewer.html?url=assets/img/certs/IEEEXtreme-12.0-2018.pdf" target="_blank" >
                     <i class='bx bxs-file-pdf pdf proof_icon' ></i>
                   </a>
                   Trainer for Participating in IEEEXtreme Programming Competition. 2016 and 2018. We have achieved a competable socre (3rd over Saudi)   
