pdf-viewer.html is OK
now you can browse the pdf files without download.

--- a/index.html
+++ b/index.html
@@ -786,7 +786,7 @@
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   He mainly worked alone and created a test bed system by himself. It means that he is suited to be a researcher. In addition, he is bright and has enthusiasm not only for his research theme but also for other related areas, such as fundamental algorithm design and parallel processing with GPGPU. (2012)
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  <a href="assets/img/testimonials/miyazaki-letter.pdf" target="_blank">
+                  <a href="pdf-viewer.html?url=assets/img/testimonials/miyazaki-letter.pdf" target="_blank">
                     <i class='bx bxs-file-pdf pdf' ></i>
                   </a>
                 </p>
@@ -804,7 +804,7 @@
                   Mr. Alfattany is a talented person. He is intelligent and hardworking. Moreover, he tries to do the assigned job as perfectly as possible. I have no hesitation in strongly recommending him for higher studies. I am confident he would perform quite well in his graduate studies. (2007)
 
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  <a href="assets/img/testimonials/khalid-letter.pdf" target="_blank">
+                  <a href="pdf-viewer.html?url=assets/img/testimonials/khalid-letter.pdf" target="_blank">
                     <i class='bx bxs-file-pdf pdf' ></i>
                   </a>
 
@@ -823,7 +823,7 @@
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Sami is an ambitious student and eager to learn, he applies his analytical skills to his work, something that is evident in his questions during and after lectures. Sami's excellent programming skills are visible is all the projects that he submitted, especially in MATLAB and C++. (2007)
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  <a href="assets/img/testimonials/anas-letter.pdf" target="_blank">
+                  <a href="pdf-viewer.html?url=assets/img/testimonials/anas-letter.pdf" target="_blank">
                     <i class='bx bxs-file-pdf pdf' ></i>
                   </a>
 
@@ -841,7 +841,7 @@
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   Mr. Sami Alfattany is a hard worker student. I found him a conscientious, keen and energetic young man. I am confident that, given proper opportunity, he will do well in any place. (2007)
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  <a href="assets/img/testimonials/hamza-letter.pdf" target="_blank">
+                  <a href="pdf-viewer.html?url=assets/img/testimonials/hamza-letter.pdf" target="_blank">
                     <i class='bx bxs-file-pdf pdf' ></i>
                   </a>
                 </p>
