add arabic/english buttons

--- a/ar.html
+++ b/ar.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Sami Alfattany - Ar</title>
+  <title>م/ سامي الفتني</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -102,6 +102,19 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>م/ سامي الفتني</h1>
       <p><span class="typed" data-typed-items="مبرمج , مطور أنظمة, باحث في الذكاء الاصطناعي, رجل أعمال حرة"></span></p>
+      <p>
+        <a href="ar.html">
+        <button>
+          <img src="assets/img/saudi.png" alt="Arabic">
+          عربي
+        </button>
+        </a>
+        <a href="index.html">
+        <button>English 
+          <img src="assets/img/uk.png" alt="English">
+        </button>
+        </a>
+      </p>
     </div>
   </section><!-- End Hero -->
 
@@ -138,14 +151,14 @@
                   <li><i class="bi bi-chevron-left"></i> <strong>جوال (UK):&nbsp;</strong> <span dir="ltr">+44 74 127 80808</span></li>
                   <li><i class="bi bi-chevron-left"></i> <strong>جوال (KSA):&nbsp;</strong> <span dir="ltr">+966 5645 99127</span></li>
                   <li><i class="bi bi-chevron-left"></i> <strong>المدينة:&nbsp;</strong> <span>شفيلد بريطانيا</span></li>
-                  <li><i class="bi bi-chevron-left"></i> <strong>الموقع الالكتروني:&nbsp;</strong> <span><a href="https://samialfattani.github.io"> https://samialfattani.github.io</a></span></li>
+                  <!-- <li><i class="bi bi-chevron-left"></i> <strong>الموقع الالكتروني:&nbsp;</strong> <span><a href="https://samialfattani.github.io"> https://samialfattani.github.io</a></span></li> -->
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-left"></i> <strong>العمر:&nbsp;</strong> <span>39</span></li>
-                  <li><i class="bi bi-chevron-left"></i> <strong>الحالة الاجتماعية:&nbsp;</strong> <span>Single</span></li>
-                  <li><i class="bi bi-chevron-left"></i> <strong>الدرجة العلمية:&nbsp;</strong> <span>Master</span></li>
+                  <li><i class="bi bi-chevron-left"></i> <strong>الحالة الاجتماعية:&nbsp;</strong> <span>أعزب</span></li>
+                  <li><i class="bi bi-chevron-left"></i> <strong>الدرجة العلمية:&nbsp;</strong> <span>ماجستير</span></li>
                   <li><i class="bi bi-chevron-left"></i> <strong>ايميل:&nbsp;</strong> <span><a href="mailto:sami_alfattani@hotmail.com">sami_alfattani@hotmail.com</a> </span></li>
                 </ul>
               </div>
