--- a/index.html
+++ b/index.html
@@ -100,6 +100,21 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Sami Alfattany</h1>
       <p>I'm <span class="typed" data-typed-items="Developer, Freelancer, Researcher, Lecturer"></span></p>
+      <p>
+        <a href="index.html">
+        <button>
+          <img src="assets/img/uk.png" alt="English">
+          English 
+        </button>
+        </a>
+        <a href="ar.html">
+        <button>
+          عربي
+          <img src="assets/img/saudi.png" alt="Arabic">
+        </button>
+        </a>
+      </p>
+
     </div>
   </section><!-- End Hero -->
 
@@ -969,8 +984,8 @@
         Email.send({
             Host: "smtp.gmail.com",
             Username: "sami.alfattani@gmail.com",
-            Password: "pjswwpiobwievinb", /*pjswwpiobwievinb*/
-            To: 'sami_alfattani@hotmail.com',
+            Password: "brnzioczzcisxcuo", /*brnzioczzcisxcuo*/
+            To: 'sami.alfattani@gmail.com',
             From: txt_email.value,
             Subject: txt_subject.value, 
             Body: txt_body.value  
