--- a/ar.html
+++ b/ar.html
@@ -399,7 +399,7 @@
               <table style="margin: 20px;" border="5">
                 <tr>
                   <td class="icon"><i class="fas fa-database"></i></td>
-                  <td><strong>قواعد البيانات والحوسبة المتوازية <br><em>(My Master Thesis)</em></strong></td>
+                  <td><strong>قواعد البيانات والحوسبة المتوازية <br><em>(رسالة الماجستير)</em></strong></td>
                   <td class="icon"><i class="fas fa-network-wired"></i></td>
                   <td><strong>تطبيقات انترنت الأشياء <br>(IoT)</strong></td>
                 </tr>
@@ -409,7 +409,7 @@
                   <!-- <td class="icon"><i class="fas fa-check-double"></i> </td>
                   <td><strong>Software Testing <br><br></strong></td> -->
                   <td class="icon">
-                    <i class="fas fa-lock"></i>
+                    <i class="fas fa-language"></i>
                   </td>
                   
                   <td><strong>الذكاء الصناعي في<br>معالجة اللغة الطبيعية (NLP)<br></strong></td>
@@ -874,7 +874,7 @@
               <div class="testimonial-item" data-aos="fade-up">
                 <p>
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
-                  شخص موهوب، ذكي ونشيط في عمله. وأيضاً، يحاول دائماً انجاز المهمة الموكلة إليه بإتقان بأكبر قدر ممكن. ليس لدي أدنى شك في أن أوصي به للدراسات العليا. أنا واثق بأنه سيقوم بأداء جيد في دراسات ما بعد التخرج. (2007)
+                  شخص موهوب، ذكي ويعمل بجد ونشاط. وأيضاً، يحاول دائماً انجاز المهمة الموكلة إليه بإتقان بأكبر قدر ممكن. ليس لدي أدنى شك في أن أوصي به للدراسات العليا ومابعدها. أنا واثق بأنه سيقوم بأداء جيد في أي مرحلة دراسية ما بعد التخرج. (2007)
                   <i class="bx bxs-quote-alt-left quote-icon-left"></i>
                   <a href="pdf-viewer.html?url=assets/img/testimonials/khalid-letter.pdf" target="_blank">
                     <i class='bx bxs-file-pdf pdf' ></i>
