start to make collapse list

--- a/ar.html
+++ b/ar.html
@@ -87,7 +87,7 @@
           <li><a href="#facts" class="nav-link scrollto"><i class='bx bx-podcast'></i> <span>حقائق</span></a></li>
           <li><a href="#skills" class="nav-link scrollto"><i class='bx bx-code-block'></i>   <span>المهارات البرمجية</span></a></li>
           <li><a href="#research" class="nav-link scrollto"><i class="bx bx-search"></i> <span>المهارات البحثية</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>الخبرات</span></a></li>
+          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>المسيرة المهنية</span></a></li>
           <!-- <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li> -->
           <li><a href="#testimonials" class="nav-link scrollto"><i class='bx bxs-like' ></i> <span>التوصيات</span></a></li>
