--- a/ar.html
+++ b/ar.html
@@ -388,30 +388,74 @@
     </section><!-- End Skills Section -->
 
     <!-- ======= Research Section ======= -->
-    <section id="research" class="about">
-      <div class="container">
+    <section id="research" class="research">
+      <div class="section-title">
+        <h2>الاهتمامات البحثية</h2>
+        <!-- <p>Lorem, ipsum dolor.</p> -->
+      </div>
 
-        <div class="section-title">
-          <h2>الاهتمامات البحثية</h2>
-          <!-- <p>Lorem, ipsum dolor.</p> -->
+      <div class="container mb-3 content" data-aos="fade-right">
+        <div class="row">
+            <ul class="list-group list-group-horizontal-sm" >
+              <li class="list-group-item col-md-5">
+                <div class="d-flex">
+                  <i class="fas fa-eye"></i> 
+                  <strong>الذكاء الاصطناعي في <br>التعرف على الأنماط<br></strong>
+                </div>                
+              </li>
+              <li class="list-group-item col-md-5">
+                <div class="d-flex">
+                  <i class="fas fa-language"></i>                  
+                  <strong>الذكاء الصناعي في<br>معالجة اللغة الطبيعية (NLP)<br></strong>
+                </div>
+              </li>              
+            </ul>            
+
+            <ul class="list-group list-group-horizontal-sm" >
+              <li class="list-group-item col-md-5">
+                <div class="d-flex">
+                  <i class="fas fa-database"></i>
+                  <strong>قواعد البيانات والحوسبة المتوازية <br><em>(رسالة الماجستير)</em></strong>
+                </div>                
+              </li>
+              <li class="list-group-item col-md-5">
+                <div class="d-flex">
+                  <i class="fas fa-network-wired"></i>
+                  <strong>تطبيقات انترنت الأشياء <br>(IoT)</strong>
+                </div>
+              </li>              
+            </ul>            
+
+            <ul class="list-group list-group-horizontal-sm" >
+              <li class="list-group-item col-md-5">
+                <div class="d-flex">
+                  <i class="fas fa-robot"></i>
+                  <strong>تعليم الآلة <br>(ML)</strong>
+                </div>                
+              </li>
+              <li class="list-group-item col-md-5">
+                <div class="d-flex">
+                  <i class="fas fa-laptop-medical"></i>
+                  <strong>تطبيقات الرعاية الصحية<br> </strong>
+                </div>
+              </li>              
+            </ul>            
+
         </div>
+      </div> 
 
+      <!-- <div class="container">
         <div class="row">
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <!-- <h3>Research Interest</h3> -->
             <div class="row">
               <table style="margin: 20px;" border="5">
                 <tr>
-                  <td class="icon"><i class="fas fa-database"></i></td>
-                  <td><strong>قواعد البيانات والحوسبة المتوازية <br><em>(رسالة الماجستير)</em></strong></td>
-                  <td class="icon"><i class="fas fa-network-wired"></i></td>
-                  <td><strong>تطبيقات انترنت الأشياء <br>(IoT)</strong></td>
+
+                  </td>
                 </tr>
                 <tr>
                   <td class="icon"><i class="fas fa-eye"></i> </td>
                   <td><strong>الذكاء الاصطناعي في <br>التعرف على الأنماط<br></strong></td>
-                  <!-- <td class="icon"><i class="fas fa-check-double"></i> </td>
-                  <td><strong>Software Testing <br><br></strong></td> -->
                   <td class="icon">
                     <i class="fas fa-language"></i>
                   </td>
@@ -420,10 +464,6 @@
 
                 </tr>
                 <tr>
-                  <td class="icon"><i class="fas fa-robot"></i></td>
-                  <td><strong>تعليم الآلة <br>(ML)</strong></td>
-                  <td class="icon"><i class="fas fa-laptop-medical"></i></td>
-                  <td><strong>تطبيقات الرعاية الصحية<br> </strong></td>
                 </tr>
                 <tr>
                 </tr>
@@ -431,8 +471,7 @@
             </div>
           </div>
         </div>
-
-      </div>
+      </div>  -->
 
       <div class="container">
         <!-- https://boxicons.com/?query=jpg -->
