--- a/index.html
+++ b/index.html
@@ -261,11 +261,11 @@
 
             <div class="progress">
               <span class="skill">Frontend:
-                <!-- <img class="skill-img" src="assets/img/skills/css.png" alt="" > -->
-                <!-- <img class="skill-img" src="assets/img/skills/html-css.png" alt="" > -->
-                <img class="skill-img" src="assets/img/skills/html-css-js.png" >
-                <img class="skill-img" src="assets/img/skills/sass.png" alt="" >
-                <img class="skill-img" src="assets/img/skills/bootstrap.png" alt="" >
+                <!-- <img  src="assets/img/skills/css.png" alt="" > -->
+                <!-- <img  src="assets/img/skills/html-css.png" alt="" > -->
+                <img  src="assets/img/skills/html-css-js.png" >
+                <img  src="assets/img/skills/sass.png" alt="" >
+                <img  src="assets/img/skills/bootstrap.png" alt="" >
                 <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
                 <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
@@ -274,9 +274,9 @@
 
             <div class="progress">
               <span class="skill">
-                <img class="skill-img" src="assets/img/skills/nodejs.png" alt="" >
-                <img class="skill-img" src="assets/img/skills/express.png" alt="" >
-                <img class="skill-img" src="assets/img/skills/angularjs.png" alt="" >
+                <img  src="assets/img/skills/nodejs.png" alt="" >
+                <img  src="assets/img/skills/express.png" alt="" >
+                <img  src="assets/img/skills/angularjs.png" alt="" >
                 <i class="val">90%</i>
               </span>
               <div class="progress-bar-wrap">
@@ -286,9 +286,9 @@
 
             <div class="progress">
               <span class="skill">Python:
-                <img class="skill-img" src="assets/img/skills/python.png" alt="" >
-                <img class="skill-img" src="assets/img/skills/flask.png" alt="" >
-                <img class="skill-img" src="assets/img/skills/pytorch.png" alt="" >
+                <img  src="assets/img/skills/python.png" alt="" >
+                <img  src="assets/img/skills/flask.png" alt="" >
+                <img  src="assets/img/skills/pytorch.png" alt="" >
                 <i class="val">95%</i>
               </span>
               <div class="progress-bar-wrap">
@@ -298,10 +298,10 @@
 
             <div class="progress">
               <span class="skill">Mobile:
-                <img class="skill-img" src="assets/img/skills/flutter.png" alt="" >
-                <img class="skill-img" src="assets/img/skills/android.png" alt="" >
-                <img class="skill-img" src="assets/img/skills/swift.png" alt="" >
-                <img class="skill-img" src="assets/img/skills/react_native.png" alt="" >
+                <img  src="assets/img/skills/flutter.png" alt="" >
+                <img  src="assets/img/skills/android.png" alt="" >
+                <img  src="assets/img/skills/swift.png" alt="" >
+                <img  src="assets/img/skills/react_native.png" alt="" >
                 <i class="val">75%</i>
               </span>
               <div class="progress-bar-wrap">
@@ -312,9 +312,9 @@
 
             <div class="progress">
               <span class="skill">Hardware:
-                <img class="skill-img" src="assets/img/skills/raspberry_pi.svg" alt="">
-                <img class="skill-img" src="assets/img/skills/arduino.png" alt="">
-                <img class="skill-img" src="assets/img/skills/drone.png" alt="">
+                <img  src="assets/img/skills/raspberry_pi.svg" alt="">
+                <img  src="assets/img/skills/arduino.png" alt="">
+                <img  src="assets/img/skills/drone.png" alt="">
                 <i class="val">50%</i>
               </span>
               <div class="progress-bar-wrap">
@@ -329,10 +329,10 @@
 
             <div class="progress">
               <span class="skill">Database: 
-                <img class="skill-img" src="assets/img/skills/mongodb.png" alt="" >
-                <img class="skill-img" src="assets/img/skills/firebease.png" alt="" >                
-                <img class="skill-img" src="assets/img/skills/oracle.png" alt="" width="100">
-                <img class="skill-img" src="assets/img/skills/postgres.png" alt="" >
+                <img  src="assets/img/skills/mongodb.png" alt="" >
+                <img  src="assets/img/skills/firebease.png" alt="" >                
+                <img  src="assets/img/skills/oracle.png" alt="" width="100">
+                <img  src="assets/img/skills/postgres.png" alt="" >
                 <i class="val">100%</i>
               </span>
               <div class="progress-bar-wrap">
@@ -342,9 +342,9 @@
 
             <div class="progress">
               <span class="skill">
-                <img class="skill-img" src="assets/img/skills/php.png" alt="">
-                <img class="skill-img" src="assets/img/skills/laravel.png" alt="">
-                <img class="skill-img" src="assets/img/skills/mysql.png" alt="">
+                <img  src="assets/img/skills/php.png" alt="">
+                <img  src="assets/img/skills/laravel.png" alt="">
+                <img  src="assets/img/skills/mysql.png" alt="">
                 <i class="val">65%</i>
               </span>
 
@@ -355,10 +355,10 @@
 
             <div class="progress">
               <span class="skill">
-                <img class="skill-img" src="assets/img/skills/javafx.png" alt="">
-                <img class="skill-img" src="assets/img/skills/gradle.png" alt="">
-                <img class="skill-img" src="assets/img/skills/junit.png" alt="">
-                <img class="skill-img" src="assets/img/skills/selenium.png" alt="">
+                <img  src="assets/img/skills/javafx.png" alt="">
+                <img  src="assets/img/skills/gradle.png" alt="">
+                <img  src="assets/img/skills/junit.png" alt="">
+                <img  src="assets/img/skills/selenium.png" alt="">
                 <i class="val">95%</i>
               </span>
               <div class="progress-bar-wrap">
@@ -368,10 +368,10 @@
 
             <div class="progress">
               <span class="skill">Linux:
-                <img class="skill-img" src="assets/img/skills/linux.png" alt="">
-                <img class="skill-img" src="assets/img/skills/kali.png" alt="">
-                <img class="skill-img" src="assets/img/skills/docker.png" alt="">
-                <img class="skill-img" src="assets/img/skills/git.png" alt="">
+                <img  src="assets/img/skills/linux.png" alt="">
+                <img  src="assets/img/skills/kali.png" alt="">
+                <img  src="assets/img/skills/docker.png" alt="">
+                <img  src="assets/img/skills/git.png" alt="">
                 <i class="val">85%</i>
               </span>
               <div class="progress-bar-wrap">
@@ -388,45 +388,61 @@
     </section><!-- End Skills Section -->
 
     <!-- ======= Research Section ======= -->
-    <section id="research" class="about">
-      <div class="container">
+    <section id="research" class="research">
 
+      <div class="container mb-3 content" data-aos="fade-right">
         <div class="row">
-          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Research Interest</h3>
-            <div class="row">
-              <table style="margin: 20px;" border="5">
-                <tr>
-                  <td class="icon"><i class="fas fa-database"></i></td>
-                  <td><strong>Database & Parallel computing <br><em>(My Master Thesis)</em></strong></td>
-                  <td class="icon"><i class="fas fa-network-wired"></i></td>
-                  <td><strong>Internet of Things (IoT) Applications</strong></td>
-                </tr>
-                <tr>
-                  <td class="icon"><i class="fas fa-eye"></i> </td>
-                  <td><strong>Pattern Recognition <br></strong></td>
-                  <!-- <td class="icon"><i class="fas fa-check-double"></i> </td>
-                  <td><strong>Software Testing <br><br></strong></td> -->
-                  <td class="icon">
-                    <i class="fas fa-language"></i>
-                  </td>                  
-                  <td><strong>Artificial Intelligence in<br>Natural Language Processing (NLP)<br></strong></td>
+            <!-- <div class="col-12 " > -->
+            <ul class="list-group list-group-horizontal-sm" >
+              <li class="list-group-item col-md-5">
+                <div class="d-flex">
+                  <i class="fas fa-eye"></i> 
+                  <strong>Pattern Recognition <br></strong>
+                </div>                
+              </li>
+              <li class="list-group-item col-md-5">
+                <div class="d-flex">
+                  <i class="fas fa-language"></i>                  
+                  <strong>Artificial Intelligence in<br>Natural Language Processing (NLP)<br></strong>
+                </div>
+              </li>              
+            </ul>            
 
-                </tr>
-                <tr>
-                  <td class="icon"><i class="fas fa-robot"></i></td>
-                  <td><strong>Machine Learning <br>(ML)</strong></td>
-                  <td class="icon"><i class="fas fa-laptop-medical"></i></td>
-                  <td><strong>Healthcare Applications<br>  </strong></td>
-                </tr>
-                <tr>
-                </tr>
-              </table>
-            </div>
-          </div>
+            <ul class="list-group list-group-horizontal-sm" >
+              <li class="list-group-item col-md-5">
+                <div class="d-flex">
+                  <i class="fas fa-database"></i>
+                  <strong>Machine Learning <br>(ML)</strong>
+                </div>                
+              </li>
+              <li class="list-group-item col-md-5">
+                <div class="d-flex">
+                  <i class="fas fa-network-wired"></i>
+                  <strong>Healthcare Applications<br>  </strong>
+                </div>
+              </li>              
+            </ul>
+            
+            <ul class="list-group list-group-horizontal-sm" >
+              <li class="list-group-item col-md-5">
+                <div class="d-flex">
+                  <i class="fas fa-robot"></i>
+                  <strong>Machine Learnint <br>(ML)</strong>
+                </div>                
+              </li>
+              <li class="list-group-item col-md-5">
+                <div class="d-flex">
+                  <i class="fas fa-laptop-medical"></i>
+                  <strong>Healthcare Applications<br> </strong>
+                </div>
+              </li>              
+            </ul>            
+
+
+          <!-- </div> -->
         </div>
+      </div> 
 
-      </div>
 
       <div class="container">
         <!-- https://boxicons.com/?query=jpg -->
