--- a/ar.html
+++ b/ar.html
@@ -554,7 +554,12 @@
               <h5>2022 - حالياً: طالب في مرحلة الدكتوراه  (PhD)</h5>
               
               <p><em>جامعة شفيلد في بريطيانيا</em></p>
-              <p> <b>تخصص معالجة اللغة الطبيعية (NLP)</b> </p>              
+              <p> طالب دكتوراه أعمل على استخدام تقنيات تعلم الآلة والتعلم العميق في
+                <b>تخصص معالجة اللغة الطبيعية (NLP)</b>
+                مشروعي الباحثي يساعد العديد من الباحثين وخصوصا في التخصصات الطبية على انجاز عملية المراجعة المنظمة بطريقة اسرع 
+                وذلك باستخدام تقنيات تعلم الآلة
+                
+              </p>              
             </div>
 
             <div class="resume-item">
