--- a/index.html
+++ b/index.html
@@ -519,7 +519,8 @@
               <h5>2022 - Present: Progressing PhD Course in Computer Science</h5>
               
               <p><em>The University of Sheffield, UK</em></p>
-              <p> <b>Natual Language Processing (NLP)</b> </p>              
+              <p>  PhD student working on Machine Learning (ML) and Deep Learning (DL) in <b>Natual Language Processing (NLP)</b> and Information Retrieva (IR) <br>
+                My research topic helps many researchers specially who are in medical fields to achieve thier Systematic Review task in a faster way by the hlep of the Machine Learning. </p>              
             </div>
 
             <div class="resume-item">
@@ -532,9 +533,11 @@
 
             <div class="resume-item">
               <!-- <h4>Bachelor of Computer Engineering</h4> -->
-              <h5>2001 - 2006: Bachelor of Computer Engineering</h5>
-              <p><em>Umm Al-Qura University (UQU), Makkah, Saudi Arabia</em></p>
-              <!-- <p>Lorem, ipsum dolor.</p> -->
+              <h5 class="expandable">2001 - 2006: Bachelor of Computer Engineering</h5>
+              <div>
+                <p><em>Umm Al-Qura University (UQU), Makkah, Saudi Arabia</em></p>
+                <p> <b>165</b>Credit hours in Computer Engineering including many Hardware courses  in Computer Archiecture, Computer Design, Networking, and Robotics, as well as Software courses such as Programming, Database, and web development.</p>
+              </div>
             </div>
 
             <h3 class="resume-title">Achievments</h3>
@@ -574,13 +577,25 @@
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
               <!-- <h4>Software Engineering (SE) Lecturer & Developer</h4> -->
+              <h5 class="expandable">2019 - 2023: Freelancer in Mobile & Web Develpment</h5>
+              <div>
+                <ul>
+                  <li>Achieved many small and intermediate software projects related to web and mobile development using Laravel, Python, Flask, Django, and others.</li>
+                  <li>Lead online software team using professional software code management tools such as Github.</li>
+                  <li>Worked as a DevOps consultant.</li>
+                </ul>
+              </div>
+            </div>
+
+            <div class="resume-item">
+              <!-- <h4>Software Engineering (SE) Lecturer & Developer</h4> -->
               <h5 class="expandable">2013 - 2022: Software Engineering (SE) Lecturer</h5>
               <div>
-              <p><em>University of Business and Technology (UBT), Jeddah, Saudi Arabia</em></p>
-              <ul>
-                <li>Teaching 30+ different courses related to SE including Programming, Databases, Web & Mobile Develpment and others.</li>
-                <li>Couching student to participate in many programming competitions (Hackathons) locally and internationally such as IEEEXtreme Competition.</li>
-              </ul>
+                <p><em>University of Business and Technology (UBT), Jeddah, Saudi Arabia</em></p>
+                <ul>
+                  <li>Teaching 30+ different courses related to SE including Programming, Databases, Web & Mobile Develpment and others.</li>
+                  <li>Couching student to participate in many programming competitions (Hackathons) locally and internationally such as IEEEXtreme Competition.</li>
+                </ul>
               </div>
             </div>
 
@@ -598,7 +613,7 @@
 
             <div class="resume-item">
               <!-- <h4>Director of Innovation Center</h4> -->
-              <h5 class="expandable">2016 – 2021: Director of Innovation Center  </h5>
+              <h5 class="expandable">2016 - 2021: Director of Innovation Center  </h5>
               <div>
               <p><em>University of Business and Technology (UBT), Jeddah, Saudi Arabia</em></p>
               <ul>
@@ -625,7 +640,7 @@
 
             <div class="resume-item">
               <!-- <h4>Database developer (ORACLE)</h4> -->
-              <h5 class="expandable">2014 – 2016: Database developer (ORACLE)</h5>
+              <h5 class="expandable">2014 - 2016: Database developer (ORACLE)</h5>
               <div>
               <p><em>Umm-Alqura Unicersity, IT Center, Makkah, Saudi Arabia</em></p>
               <ul>
@@ -637,7 +652,7 @@
 
             <div class="resume-item">
               <!-- <h4>Solution Analyst</h4> -->
-              <h5 class="expandable">2013 – 2014: Solution Analyst</h5>
+              <h5 class="expandable">2013 - 2014: Solution Analyst</h5>
               <div>
               <p><em>GAMA software development organization</em></p>
               <ul>
@@ -649,7 +664,7 @@
 
             <div class="resume-item">
               <!-- <h4>Business Developer </h4> -->
-              <h5 class="expandable">2013 – 2014: Business Developer </h5>
+              <h5 class="expandable">2013 - 2014: Business Developer </h5>
               <div>
               <p><em>IT department in United Naghi Co. Ltd</em></p>
               <ul>
@@ -660,7 +675,7 @@
 
             <div class="resume-item">
               <!-- <h4>Part-time job as a Programmer & Web developer</h4> -->
-              <h5 class="expandable">2008 – 2010: Part-time job as a Programmer & Web developer</h5>
+              <h5 class="expandable">2008 - 2010: Part-time job as a Programmer & Web developer</h5>
               <p><em>FAL company,</em></p>
             </div>
 
